Add feedback/contact me/contribute section at the end

--- a/header.html
+++ b/header.html
@@ -31,6 +31,13 @@
         border: 0;
     }
 
+    .feedback {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 5px;
+    }
+
     @media (min-resolution: 2dppx), (-webkit-min-device-pixel-ratio: 2),
            (min-resolution: 192dpi){
     body{
@@ -63,3 +70,4 @@
   </script>
 </head>
 <body>
+<div class="feedback"><a href="#feedback">Feedback</a></div>
